--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -61,7 +61,7 @@ margin-bottom: 5em;
     background-color: #fbfbfb;
     margin: 0 auto; 
     margin-bottom: 5.9rem;
-    margin-top: -5em;
+    /* margin-top: -5em; */
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
