--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -41,6 +41,7 @@ margin-bottom: 5em;
 
     display: grid;  
     place-content: center; 
+    outline: 22px solid red;
 
 
 }
@@ -540,6 +541,7 @@ background-color: #82c34a;
     padding-right: 3px; 
     padding-left: 3px; 
     padding-top: 3px; 
+    background-color: red;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
