--- a/app/globals.css
+++ b/app/globals.css
@@ -18,17 +18,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
   background: white;
   color: var(--foreground);
-  font-family: var(--font-chewy), sans-serif
+  font-family: var(--font-nunito), sans-serif
 
 }
 
