--- a/app/Styles/start.module.css
+++ b/app/Styles/start.module.css
@@ -4,11 +4,13 @@
 .mainCTASection{
 
 
-    height: 90vh; 
-    width: 90vw; 
+    height: 100vh; 
+    width: 100vw; 
     margin: 0 auto; 
     display: grid; 
-    place-content: center;  
+    place-content: center;
+    background-color: #013699;
+
 
 
 
@@ -18,24 +20,32 @@
 .mainLogoContainer{
 
 
-color: black;
+/* color: black; */
+color: white; 
+text-align: center;
+width: 60%; 
+margin: 0 auto; 
 
-font-size: clamp(1rem + 1vw, 2rem, 3rem);
+font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 }
 
+.theSpan{
 
+    display: block; 
+    margin: 0 auto; 
+    font-size: 0.9rem;
+
+
+
+}
 
 .buttonSectionContainer{
 
-
-/* outline: 3px solid red;  */
-display: grid;
-place-content: center;
-margin: 3em auto; 
-
-
+    display: grid;
+    place-content: center;
+    margin: 3em auto; 
 
 }
 
@@ -44,22 +54,59 @@ margin: 3em auto;
     /*all: unset;
     */height: 3rem !important;
     width: 9rem !important;
-    color: black;
-    background-color: aliceblue;
+    color: white;
+    /*background-color: aliceblue;
+    */background-color: #f49b53;
     display: grid;
     place-content: center;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-
+    border-radius: 14px;
+    -webkit-border-radius: 14px;
+    -moz-border-radius: 14px;
+    -ms-border-radius: 14px;
+    -o-border-radius: 14px;
     cursor: pointer;
 }
 
 
 
+.ivviLogoContainer{
 
+
+    margin: 0 auto;
+    display: grid;  
+    place-content: center;
+    
+    /* Add this into a media query  */
+    /* padding-top: 4em;  */
+
+
+
+
+}
+
+
+
+.bySpan{
+
+
+    margin: 0 auto;
+
+    margin-bottom: -0em; 
+    color: white; 
+    
+
+
+
+}
+
+
+.logo{
+
+
+
+
+
+}
 
 
 
