--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -345,7 +345,7 @@ margin-bottom: 5em;
 .doodleContainer{
 
 
-    margin-top: -1.5em; 
+    margin-top: -1.5em;     
 
     
 }
@@ -595,6 +595,8 @@ background-color: #82c34a;
     place-content: center;
     cursor: pointer;
     padding: 0.575rem;
+    color: white;
+    font-weight: bold;
 }
 
 .sometimesSpan{
@@ -805,6 +807,7 @@ background-color: #82c34a;
 
 #yesButton{
     background-color: rgb(156, 194, 109);
+    /* outline: 2px solid lime; */
 }
 
 #yesButton::before {
@@ -851,18 +854,90 @@ background-color: #82c34a;
 }
 
 #yesStackThree{
+    height: 109%;
+    opacity:0.8;
+    /* opacity: 0.63; */
 
+
+    background-color: rgb(137, 171, 96);
+    margin-top: -4px;
+    transform: rotate(2deg);
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
+    -o-transform: rotate(2deg);
 }
 
 #yesStackFour{
+    height: 109%;
+    opacity:0.75;
+    /* opacity: 0.63; */
+
+    
+    background-color: rgb(137, 171, 96);
+    margin-bottom: -4px;
+    transform: rotate(2deg);
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
+    -o-transform: rotate(2deg);
 
 }
 
 #yesStackFive{
 
+
+    height: 113%;
+    opacity:0.55;
+    /* opacity: 0.63; */
+
+    
+    background-color: rgb(137, 171, 96);
+    margin-bottom: -5px;
+    transform: rotate(2deg);
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
+    -o-transform: rotate(2deg);
+
 }
 
 #yesStackSix{
+
+    
+    height: 113%;
+    opacity:0.55;
+    opacity: 0.63;
+
+
+    
+    background-color: rgb(137, 171, 96);
+    margin-right: -5px;
+    transform: rotate(2deg);
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
+    -o-transform: rotate(2deg);
+
+
+}
+
+#yesStackSeven{
+
+    height: 100%;
+    opacity:0.55;
+    opacity: 0.63;
+
+
+    
+    background-color: rgb(137, 171, 96);
+    margin-left: -4px;
+    transform: rotate(2deg);
+    -webkit-transform: rotate(2deg);
+    -moz-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
+    -o-transform: rotate(2deg);
+
 
 }
 
