--- a/app/Styles/legal.module.css
+++ b/app/Styles/legal.module.css
@@ -56,7 +56,7 @@
 .mainTextHeader {
 
     margin: 0 auto; 
-    margin-top: 4rem !important; 
+    margin-top: 5rem !important; 
 
     display: grid;
     place-content: center;
@@ -64,7 +64,8 @@
     font-weight: bolder;
     /* width: 60%;  */
     text-align: center;
-    line-height: normal;
+    line-height: 1.12555;
+    /* line-height: normal; */
     color: #013699; 
     
 
@@ -73,21 +74,73 @@
 
 .mainSupportingTextContainer {
 
-
-    width: 80%;
+    font-size: 1.1rem;
+    /* font-weight: bo; */
+    width: 70%;
     margin: 0 auto; 
     text-align: center;
-    margin-bottom: 7rem;
-    margin-top: 0.45em; 
+    margin-bottom: 7.5rem;
+    margin-top: 0.65em; 
     color: #69696f;
-
-
-
+    display: grid;
+    place-content: center;
 
 
 
 
 }
+
+.mainTextSpan{
+
+
+    /* width: 50%;  */
+    /* outline: 4px solid lime; */
+
+
+}
+
+
+
+.legalSpan{
+
+
+    display: inline-block;
+    width: 15rem !important;
+    margin: 0 auto;  
+
+
+}
+
+
+
+
+.termsSpan{
+
+
+
+
+cursor: pointer;
+color: #f4ba4f;
+text-decoration: underline;
+
+
+
+}
+
+
+.conditionsSpan{
+
+
+    color: #f4ba4f;
+    text-decoration: underline;
+
+
+
+
+}
+
+
+
 
 
 .pagination{
@@ -104,9 +157,6 @@
     display: grid;
     place-content: center;
 
-
-
-
 }
 
 
@@ -121,44 +171,14 @@
     -moz-border-radius:19px;
     -ms-border-radius:19px;
     -o-border-radius:19px;
-    margin-top: -4em;
-
+    margin-top: -4.35em;
 
     color: white; 
     font-size: 1.5rem;
     font-weight: bolder;
 
 
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
